added random/delete logic

--- a/lotto.html
+++ b/lotto.html
@@ -9,11 +9,18 @@
 <body>
     <div id="container">
     </div>
-    <div id="controls">
-        <button id="button">Pick the numbers</button>
+    <div class="container-controls">
+        <div class="trash">
+            <svg class="trash-btn deactivate" viewbox="0 0 24 24">
+                <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"></path>
+            </svg>
+        </div>
+        <div class="trash">
+            <svg class="random" viewbox="0 0 24 24">
+                <path d="M14.28 7.52a2.016 2.016 0 00-2.56-1.2l-9.4 3.42a2.016 2.016 0 00-1.2 2.56l3.42 9.4a2.016 2.016 0 002.56 1.2l9.4-3.42a2.016 2.016 0 001.2-2.56l-3.42-9.4zm-9.75 5.01c-.21-.58.09-1.23.67-1.44.58-.21 1.23.09 1.44.67a1.124 1.124 0 01-2.11.77zm1.19 3.29c-.21-.58.09-1.23.67-1.44.58-.21 1.23.09 1.44.67.21.58-.09 1.23-.67 1.44-.58.21-1.22-.09-1.44-.67zm2.64 3.96c-.58.21-1.23-.09-1.44-.67-.21-.58.09-1.23.67-1.44.58-.21 1.23.09 1.44.67.22.58-.08 1.22-.67 1.44zm1.34-9.13c-.21-.58.09-1.23.67-1.44.58-.21 1.23.09 1.44.67a1.124 1.124 0 01-2.11.77zm1.19 3.28c-.21-.58.09-1.23.67-1.44.58-.21 1.23.09 1.44.67.21.58-.09 1.23-.67 1.44-.58.22-1.23-.08-1.44-.67zm2.64 3.97c-.58.21-1.23-.09-1.44-.67-.21-.58.09-1.23.67-1.44.58-.21 1.23.09 1.44.67.22.58-.08 1.22-.67 1.44zm8.16-14.04l-7.52-2.74c-1.03-.38-2.19.16-2.56 1.2l-1.03 2.82.62-.23c.38-.14.78-.21 1.19-.21.35 0 .69.06 1.01.15.01-.09.01-.18.04-.27.19-.52.76-.79 1.28-.6.52.19.79.76.6 1.28-.08.22-.24.38-.43.5.34.35.62.76.79 1.24l1.25 3.43a1.002 1.002 0 011.38 1.24c-.12.32-.39.53-.7.61l1.06 2.92a2 2 0 001.48-1.27l2.74-7.52c.37-1.02-.17-2.18-1.2-2.55zm-1.67 3.11c-.19.52-.76.79-1.28.6a.998.998 0 01-.6-1.28c.19-.52.76-.79 1.28-.6.52.19.79.77.6 1.28z" style="fill:#535353"></path>
+            </svg>
+        </div>
     </div>
-    
-
     <script src="lotto.js"></script>
 </body>
 </html>
